--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -16,6 +16,40 @@ such as profiles, licences etc.
 
 Stories that we haven't quite classified yet, but are needed.
 
+*** Syntax checking support for stitch templates                      :story:
+
+It would be really nice to have syntax checking for stitch
+templates. This may be simpler than expected. We have two types of
+errors:
+
+- stitch errors: these are invalid stitch templates. We already detect
+  these. We just need to output a GCC-style error message.
+- c++ errors: these occur after we've weaved, by compiling the c++
+  code. These are slightly trickier: we need to map the c++ lines to
+  the stitch lines; this can be done during the generation of the
+  stitch template, where as we output the code, we also keep track of
+  the lines. For example, in a loop, one stitch template line will map
+  to many c++ lines. We also need access to the compilation
+  database. We then shell out using Boost.Process, run the compiler
+  against the c++ code, retrieve the GCC/Clang errors, and map the
+  line and columns from the compiler back into the stitch line and
+  columns. We then output the errors, but using the stitch line and
+  column numbers (presumably the column remains unchanged, or perhaps
+  we should just remove it).
+
+Ideally we want to preserve the original compiler output as much as
+possible, only interfering with the mapping. We should also make sure
+we only map lines in the template file, ignoring everything else.
+
+We will also have to reactivate the weaving mode, so this will require
+a bit of thinking:
+
+- we only want to weave a single template; however, in the new world,
+  that is actually equivalent to weaving the entire model because we
+  need to go through all of the transforms.
+- this also means we may end up with lots of errors from other
+  templates. We need to avoid this.
+
 *** Use C# notation in JSON C# models                                 :story:
 
 At present we are generating C++ style types in JSON models (at least
