--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,18 +13,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-21 Tue 10:26]
+#+CAPTION: Clock summary at [2019-05-21 Tue 11:02]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *10:30* |       |      | 100.0 |
+| *Total time*                                           | *11:05* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 10:30   |       |      | 100.0 |
-| Active                                                 |         | 10:30 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  34.4 |
-| Create a video demo for the previous sprint's features |         |       | 3:46 |  35.9 |
-| Sprint and product backlog grooming                    |         |       | 0:22 |   3.5 |
-| Make wale templates meta-model elements                |         |       | 2:45 |  26.2 |
+| Stories                                                | 11:05   |       |      | 100.0 |
+| Active                                                 |         | 11:05 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  32.6 |
+| Create a video demo for the previous sprint's features |         |       | 3:46 |  34.0 |
+| Sprint and product backlog grooming                    |         |       | 0:22 |   3.3 |
+| Make wale templates meta-model elements                |         |       | 2:45 |  24.8 |
+| Flatten the data directory                             |         |       | 0:35 |   5.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -276,7 +277,11 @@ Notes:
   meta-data.
 - make wale template input path relative to the output directory.
 
-*** Flatten the data directory                                        :story:
+*** COMPLETED Flatten the data directory                              :story:
+    CLOSED: [2019-05-21 Tue 11:02]
+    :LOGBOOK:
+    CLOCK: [2019-05-21 Tue 10:27]--[2019-05-21 Tue 11:02] =>  0:35
+    :END:
 
 Now that we have finally removed all the JSON files and wale templates
 from the data directory, all that is left are the top-level MASD
